@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-17T01:12:32Z",
-  "count_outdated" : 1750,
-  "uniques_outdated" : 995,
-  "count" : 1778,
-  "uniques" : 1019,
+  "timestamp" : "2025-02-18T01:09:55Z",
+  "count_outdated" : 1751,
+  "uniques_outdated" : 996,
+  "count" : 1779,
+  "uniques" : 1020,
   "clones" : [
-    {
-      "timestamp": "2025-02-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-05T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-02-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
