@@ -1,12 +1,7 @@
 {
   "count": 28,
-  "uniques": 15,
+  "uniques": 16,
   "clones": [
-    {
-      "timestamp": "2025-02-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-05T00:00:00Z",
       "count": 1,
@@ -56,6 +51,11 @@
       "timestamp": "2025-02-16T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-02-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
